# flask_orders_manager

./: .env  .env.local  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  wsgi.py
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 0030c081cc93_create_order_table.py  2629735bfdfb_make_fake_data.py  e6fcc046e6ee_add_extension_pg_stat_statements.py
src/: __init__.py
src/adapter/blueprints/: order_blueprint.py
src/adapter/config/: config.py
src/adapter/constants/: constants.py
src/adapter/database/: order_orm.py
src/adapter/forms/: forms.py
src/adapter/models/: models.py
src/application/: order.py  search_orders.py
src/domain/: models.py  order_orm.py
src/templates/: base.html  failed.html  navbar.html  order_create.html  order_delete.html  order_detail.html  order_list.html  order_update.html  success.html
src/templates/errors/: 404.html  500.html
tests/: conftest.py
tests/test_mamba/: test_app.py  test_database.py  test_validate.py
tests/test_mamba/test_adapter/: test_app.py  test_database.py  test_model.py
tests/test_mamba/test_application/: test_app.py
tests/test_unittest/: test_app.py  test_validate.py
