[tool.poetry]
name = "orders_manager"
version = "0.1.0"
description = ""
authors = ["Evgenii Koskelainen <koskelainen8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-wtf = "^1.2.1"
inject = "^5.2.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
mamba = "^0.11.3"
expects = "^0.9.0"
ruff = "^0.3.2"
alembic = "^1.13.1"
coverage = {extras = ["toml"], version = "^7.4.4"}
flask-testing = "^0.8.1"
faker = "^24.2.0"

[tool.poetry.group.initdb.dependencies]
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
faker = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["./src", ]
omit = [
    "*/test_mamba/*",
    "./src/__init__.py",
    "wsgi.py",
    ]
command_line = "-m unittest discover -s tests/test_unittest/"

[tool.coverage.report]
show_missing = true
exclude_also = [
    "with description",
    ]

[tool.coverage.html]
show_contexts = true
directory = 'coverage/html'

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
lint.select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "COM", # flakes8-commas
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade
    "S",   # bandit
]